fix: collapsed settings interaction

--- a/src/ui.css
+++ b/src/ui.css
@@ -127,6 +127,7 @@
 .qs-settings.collapsed .qs-settings-content {
   max-height: 0;
   opacity: 0;
+  pointer-events: none;
 }
 .qs-settings.collapsed {
   padding-bottom: 0px;
